--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,8 +6,9 @@
     <thead>
       <tr>
         <td>#</td>
-        <td>Title</td>
+        <td>Movie</td>
         <td>Description</td>
+        <td>Creator</td>
       </tr>
     </thead>
     <tbody>
@@ -16,6 +17,7 @@
           <td>#</td>
           <td><%= link_to(movie.title, movie_path(movie)) %></td>
           <td><%= movie.description %></td>
+          <td><%= movie.user.email %></td>
           <td>
               <%= link_to("Edit", edit_movie_path(movie), class: "btn btn-sm btn-default")%>
           </td>
