--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,29 @@
 <div class="col-md-12">
   <div class="movie">
     <%= link_to("Write a Review", new_movie_review_path(@movie), class: "btn btn-default pull-right")%>
-    <% if current_user && current_user == movie.user %>
+    <% if current_user && current_user == @movie.user %>
     <%= link_to("Edit", edit_movie_path(@movie), class: "btn btn-primary pull-right")%>
     <% end %>
   </div>
   <h2><%= @movie.title %></h2>
   <p><%= @movie.description %></p>
+
+  <table class="table">
+    <thead>
+     <tr>
+        <th>Review Content</th>
+        <th>Creator</th>
+        <th>Release Time</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @reviews.each do |review| %>
+        <tr>
+          <td><%= review.content %></td>
+          <td><%= review.user.email %></td>
+          <td><%= review.created_at %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
