when created a movie, join it automatically

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,13 @@
 <div class="col-md-12">
+  <span class="pull-right">
+  <% if current_user && current_user.is_member_of?(@movie) %>
+        <%= link_to("Remove it form favorite", quit_movie_path(@movie), method: :post, class: "btn btn-default") %>
+<label class="label label-success"> Favorited </label>
+<% else %>
+  <%= link_to("Favorite it", join_movie_path(@movie), method: :post, class: "btn btn-default") %>
+  <label class="label label-warning"> Favorite? </label>
+<% end %>
+</span>
   <div class="movie">
     <%= link_to("Write a Review", new_movie_review_path(@movie), class: "btn btn-default pull-right")%>
     <% if current_user && current_user == @movie.user %>
