--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
+        <!-- Brand and toggle get movieed for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand" href="/">iMovieStore</a>
         </div>
@@ -18,6 +18,8 @@
                     <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
+                    <li> <%= link_to("My Movies", account_movies_path) %></li>
+                     <li class="divider"> </li>
                     <li><%=link_to("Exit",destroy_user_session_path, method: :delete)%></li>
                   </ul>
                 <% end %>
