--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,5 +1,7 @@
-<h2 class="text-center">New Review</h2>
-
 <div class="col-md-4 col-md-offset-4">
+  <h2>Edit Movie Information</h2>
+
+  <hr>
+
   <%= render "form" %>
 </div>
