--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,7 +9,9 @@
 <% end %>
 </span>
   <div class="movie">
+    <% if current_user && current_user.is_member_of?(@movie) %>
     <%= link_to("Write a Review", new_movie_review_path(@movie), class: "btn btn-default pull-right")%>
+    <% end %>
     <% if current_user && current_user == @movie.user %>
     <%= link_to("Edit", edit_movie_path(@movie), class: "btn btn-primary pull-right")%>
     <% end %>
