--- a/app/views/movies/_movie_item.html.erb
+++ b/app/views/movies/_movie_item.html.erb
@@ -1,3 +1,13 @@
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <td>#</td>
+      <td>Movie</td>
+      <td>Description</td>
+      <td>Creator</td>
+    </tr>
+  </thead>
+  <tbody>
   <tr>
     <td>#</td>
     <td><%= link_to(movie.title, movie_path(movie)) %></td>
@@ -15,3 +25,6 @@
       <% end %>
     </td>
   </tr>
+</tbody>
+</table>
+</div>
