--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :running_time%>
     <%= f.input :description, input_html: { class: "form-control"} %>
     <div class="showtime">
-      <%= f.input :showtime, :as => :string%>
+      <%= f.input :release_date, :as => :string%>
     </div>
     <%= form_tag 'MoviePost', :multipart => true do%>
     <%= f.input :image, as: :file%>
