--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -13,6 +13,7 @@
     </div>
     <%= form_tag 'MoviePost', :multipart => true do%>
     <%= f.input :image, as: :file%>
+     <%= f.hidden_field :image_cache %>
     <%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
     <% end %>
   </div>
