font-awesome worked

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,5 @@
 @import "bootstrap";
 @import "custom";
 @import "bootstrap-datepicker3";
+@import "font-awesome-sprockets";
 @import "font-awesome";
