--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,23 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 iMovieStore
+    <p class="text-center" style="margin: 0px;">Copyright ©2016 iMovieStore
         <br>Design by
         <a href="http://courses.growthschool.com/courses/rails-101/" target=_new>xdite</a>
+        <br>
+        <!-- <font id="showbox" style="margin:auto"></font> -->
+        <div id="showbox" style="margin:0 auto;width:20%;"></div>
     </p>
 </footer>
+<script language="JavaScript">
+    function ShowTime() {
+        var NowDate = new Date();
+        var y = NowDate.getFullYear();
+        var h = NowDate.getHours();
+        var m = NowDate.getMinutes();
+        var s = NowDate.getSeconds();
+        document.getElementById('showbox').innerHTML ="现在时间：" + y + '年' + h + '时' + m + '分' + s + '秒';
+        setTimeout('ShowTime()', 1000);
+    }
+</script>
+<body onload="ShowTime()">
+
+</body>
