--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,21 +1,37 @@
-<p><h1>Select Movie</h1> <div class="col-md-12"> <%= link_to("New movie", new_movie_path, class: "btn btn-primary ") %> </p> <hr>
+<p>
+    <h1>Select Movie</h1>
+    <div class="col-md-12">
+        <%= link_to("New movie", new_movie_path, class: "btn btn-primary ") %>
+    </p>
+    <hr>
 
-<div class="row">
-  <% @movies.each do |movie|%>
-  <div class="img">
-    <%= link_to movie_path(movie) do %>
-    <% if movie.image.present? %>
-    <%= image_tag(movie.image.url, :alt => movie.title)%>
-    <% else %>
-    <%= image_tag(root_url + "images/No-image-available.jpg", :alt => "No-image-available")%>
-    <% end %>
-    <div style="margin-top:10px;margin-left:20px;">
-      <% if current_user && current_user == movie.user %>
-      <%= link_to("Delete this movie", movie_path(movie),    class: "btn btn-sm btn-default",
+    <div class="row">
+        <% @movies.each do |movie|%>
+        <div class="img">
+            <%= link_to movie_path(movie) do %>
+            <% if movie.image.present? %>
+            <%= image_tag(movie.image.url, :alt => movie.title)%>
+        <% else %>
+            <%= image_tag(root_url + "images/No-image-available.jpg", :alt => "No-image-available")%>
+            <% end %>
+            <div style="margin-top:10px;margin-left:20px;">
+                <% if current_user && current_user == movie.user %>
+                <%= link_to("Delete this movie", movie_path(movie),    class: "btn btn-sm btn-default",
                     method: :delete, data: { confirm: "Are you sure?" } )%>
-      <% end %>
+                <% end %>
+            </div>
+            <% end %>
+        </div>
+        <% end %>
+        <%=video_tag("/uploads/movie/image/8/movie.ogg", :controls => true, :autobuffer => true, :autoplay => false, :loop => true) %>
+        <!-- <br>
+        <video src="/uploads/movie/image/8/movie.ogg" controls="controls">
+            your browser does not support the video tag
+        </video> -->
+
+        <!-- <video width="320" height="240" autoplay loop>
+            <source src="movie.mp4" type="video/mp4"/>
+            <source src="movie.ogg" type="video/ogg"/>
+            Your browser does not support the video tag.
+        </video> -->
     </div>
-  <% end %>
-  </div>
-    <% end %>
-  </div>
