--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -23,7 +23,7 @@
             <% end %>
         </div>
         <% end %>
-        <%=video_tag("/uploads/movie/image/8/movie.ogg", :controls => true, :autobuffer => true, :autoplay => false, :loop => true) %>
+        <%#=video_tag("/uploads/movie/image/8/movie.ogg", :controls => true, :autobuffer => true, :autoplay => false, :loop => true) %>
         <!-- <br>
         <video src="/uploads/movie/image/8/movie.ogg" controls="controls">
             your browser does not support the video tag
